Fixed header on small screens

--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,11 @@ h3 {
 	} 
 }
 
+.mdl-layout__container.has-scrolling-header .mdl-layout--fixed-header .mdl-layout__content {
+  overflow-y: visible;
+  overflow-x: visible;
+  overflow: visible;
+}
 
 .mdl-layout__tab-bar-button {
   display: none;
